# ctrlpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REFERENCES.bib  codecov.yml
.planning/: REQUIREMENTS.md  (+2 more)
examples/advanced_pid/: CMakeLists.txt  main.cpp
examples/advanced_pid/console/: main.cpp
examples/advanced_pid/interactive/: main.cpp
examples/basic_pid/: CMakeLists.txt  main.cpp
examples/basic_pid/console/: main.cpp
examples/basic_pid/interactive/: main.cpp
examples/lqr/: CMakeLists.txt  ctrlpp_lqr_01_basic_observer.cpp  ctrlpp_lqr_02_setpoint_tracking.cpp  ctrlpp_lqr_03_observer_comparison.cpp
examples/lqr_observer/: CMakeLists.txt  main.cpp
examples/lqr_observer/console/: main.cpp
examples/lqr_observer/interactive/: main.cpp
examples/mpc/: CMakeLists.txt  ctrlpp_mpc_01_regulation.cpp  ctrlpp_mpc_02_observer_mpc.cpp  ctrlpp_mpc_03_trajectory.cpp  ctrlpp_mpc_04_mobile_robot.cpp
examples/nmpc/: CMakeLists.txt  ctrlpp_nmpc_01_pendulum.cpp  ctrlpp_nmpc_02_swingup.cpp
examples/pid/: CMakeLists.txt  ctrlpp_pid_01_basic.cpp  ctrlpp_pid_02_policies.cpp  ctrlpp_pid_03_cascade.cpp  ctrlpp_pid_04_joint_servo.cpp
examples/sysid/: CMakeLists.txt  batch_arx_example.cpp  rls_example.cpp
examples/trajectory/: CMakeLists.txt  ctrlpp_trajectory_01_cubic.cpp  ctrlpp_trajectory_02_quintic.cpp  ctrlpp_trajectory_03_trapezoidal.cpp  ctrlpp_trajectory_04_double_s.cpp  ctrlpp_trajectory_05_modified_profiles.cpp  ctrlpp_trajectory_06_cubic_spline.cpp  ctrlpp_trajectory_07_bspline.cpp  ctrlpp_trajectory_08_online_planner.cpp  ctrlpp_trajectory_09_multi_axis_sync.cpp  ctrlpp_trajectory_10_mpc_tracking.cpp
lib/ctrlpp/: CMakeLists.txt
lib/ctrlpp-eigen/: CMakeLists.txt
lib/ctrlpp-eigen/include/ctrlpp/: ctrlpp_eigen.h  eigen_dare.h  eigen_discretise.h  eigen_kalman.h  eigen_linalg.h  eigen_lqr.h  eigen_luenberger.h  eigen_place.h
lib/ctrlpp-implot/: CMakeLists.txt
lib/ctrlpp-implot/include/ctrlpp/implot/: app.h  scrolling_plot.h  signal_recorder.h  sim_harness.h  static_plot.h
lib/ctrlpp-implot/src/: app.cpp  scrolling_plot.cpp  signal_recorder.cpp  sim_harness.cpp  static_plot.cpp
lib/ctrlpp/include/ctrlpp/: analysis.h  complementary_filter.h  control.h  conversion.h  ctrlpp.h  dare.h  discretise.h  discretise_impl.h  dsp.h  ekf.h  estimation.h  kalman.h  linalg_policy.h  lqr.h  luenberger.h  manifold_ukf.h  mekf.h  mhe.h  model.h  mpc.h  nmhe.h  nmpc.h  observer_policy.h  particle_filter.h  pid.h  pid_config.h  pid_policies.h  place.h  propagate.h  so3.h  solver_policy.h  state_space.h  sysid.h  traj.h  trajectory.h  transfer_function.h  types.h  ukf.h
lib/ctrlpp/include/ctrlpp/control/: dare.h  lqr.h  pid.h  pid_config.h  pid_policies.h  place.h  solver_policy.h
lib/ctrlpp/include/ctrlpp/detail/: covariance_ops.h  numerical_diff.h  numerical_mekf_diff.h  runge_kutta.h
lib/ctrlpp/include/ctrlpp/dsp/: biquad.h  discrete_filter.h  fir.h
lib/ctrlpp/include/ctrlpp/estimation/: complementary_filter.h  ekf.h  kalman.h  luenberger.h  manifold_ukf.h  mekf.h  observer_policy.h  particle_filter.h  ukf.h
lib/ctrlpp/include/ctrlpp/lie/: so3.h
lib/ctrlpp/include/ctrlpp/mhe/: mhe_config.h  mhe_diagnostics.h  mhe_nlp_formulation.h  mhe_qp_formulation.h
lib/ctrlpp/include/ctrlpp/model/: analysis.h  constraint_model.h  conversion.h  differentiable_dynamics.h  differentiable_measurement.h  discretise.h  dynamics_model.h  measurement_model.h  propagate.h  state_space.h  transfer_function.h
lib/ctrlpp/include/ctrlpp/mpc/: constraint_model.h  diagnostics.h  differentiable_constraint.h  differentiable_dynamics.h  differentiable_measurement.h  dynamics_model.h  invariant_set.h  measurement_model.h  nlopt_solver.h  nlp_formulation.h  nlp_solver.h  nmpc_config.h  osqp_solver.h  qp_formulation.h  qp_solver.h  qp_types.h  terminal_set.h
lib/ctrlpp/include/ctrlpp/resampling/: multinomial_resampling.h  resampling_strategy.h  systematic_resampling.h
lib/ctrlpp/include/ctrlpp/sigma_points/: julier_sigma_points.h  merwe_sigma_points.h  sigma_point_strategy.h  so3_sigma_points.h
lib/ctrlpp/include/ctrlpp/sysid/: batch_arx.h  fit_metrics.h  n4sid.h  recursive_arx.h  rls.h  sysid_result.h
lib/ctrlpp/include/ctrlpp/traj/: bspline_trajectory.h  cubic_path.h  cubic_segment.h  cubic_spline.h  cubic_trajectory.h  cycloidal_path.h  double_s_trajectory.h  harmonic_path.h  modified_sin_trajectory.h  modified_trap_trajectory.h  motion_laws.h  online_planner_2nd.h  online_planner_3rd.h  path_segment.h  piecewise.h  piecewise_path.h  piecewise_trajectory.h  quintic_path.h  quintic_segment.h  quintic_trajectory.h  scaled_segment.h  septic_path.h  septic_segment.h  septic_trajectory.h  smoothing_spline.h  synchronize.h  time_scaling.h  trajectory.h  trajectory_segment.h  trajectory_types.h  trapezoidal_trajectory.h
tests/: CMakeLists.txt
tests/common/: naive_linalg.h
tests/compile/: CMakeLists.txt  concept_check_test.cpp  concept_conformance_test.cpp  eigen_conformance_test.cpp
tests/fuzz/: CMakeLists.txt  fuzz_dare.cpp  fuzz_kalman.cpp  fuzz_mpc.cpp  fuzz_nmpc.cpp  fuzz_pid.cpp
tests/integration/: CMakeLists.txt
tests/integration/consumer/: CMakeLists.txt  main.cpp
tests/unit/: CMakeLists.txt  analysis_extended_test.cpp  analysis_test.cpp  batch_arx_test.cpp  biquad_test.cpp  bspline_trajectory_test.cpp  complementary_filter_test.cpp  conversion_test.cpp  cubic_spline_test.cpp  dare_property_test.cpp  dare_test.cpp  discretise_test.cpp  double_s_trajectory_test.cpp  dsp_property_test.cpp  ekf_convergence_test.cpp  ekf_covariance_test.cpp  ekf_test.cpp  estimator_property_test.cpp  fir_test.cpp  fit_metrics_test.cpp  kalman_property_test.cpp  kalman_test.cpp  lqr_test.cpp  luenberger_test.cpp  manifold_ukf_test.cpp  mekf_test.cpp  mhe_test.cpp  modified_sin_trajectory_test.cpp  modified_trap_trajectory_test.cpp  motion_laws_test.cpp  mpc_closedloop_test.cpp  mpc_osqp_test.cpp  mpc_property_test.cpp  mpc_test.cpp  n4sid_test.cpp  nmhe_test.cpp  nmpc_constraint_test.cpp  nmpc_nlopt_test.cpp  nmpc_test.cpp  numerical_diff_test.cpp  (+45 more)
(+251 files in other folders)
