add_executable(ctrlpp_advanced_pid main.cpp)
if (CTRLPP_BUILD_IMPLOT)
    target_link_libraries(ctrlpp_advanced_pid PRIVATE ctrlpp::implot ctrlpp::eigen)
else()
    target_link_libraries(ctrlpp_advanced_pid PRIVATE ctrlpp::eigen)
endif()
target_compile_options(ctrlpp_advanced_pid PRIVATE ${CTRLPP_WARNING_FLAGS})
