function(make_test TEST_FILE)
    add_executable(${TEST_FILE} "${CMAKE_CURRENT_LIST_DIR}/${TEST_FILE}.cpp")
    target_link_libraries(${TEST_FILE} PRIVATE ctrlpp::ctrlpp Catch2::Catch2WithMain)
    target_compile_options(${TEST_FILE} PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME ${TEST_FILE} COMMAND ${TEST_FILE})
endfunction()

make_test(pid_test)
make_test(state_space_test)
make_test(observer_concept_test)
make_test(conversion_test)
make_test(analysis_test)
make_test(discretise_test)
make_test(pid_eigen_test)
make_test(dare_test)
make_test(analysis_extended_test)
make_test(kalman_test)
make_test(luenberger_test)
make_test(lqr_test)
make_test(mpc_test)

if (CTRLPP_BUILD_OSQP)
    add_executable(mpc_osqp_test "${CMAKE_CURRENT_LIST_DIR}/mpc_osqp_test.cpp")
    target_link_libraries(mpc_osqp_test PRIVATE ctrlpp::osqp Catch2::Catch2WithMain)
    target_compile_options(mpc_osqp_test PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME mpc_osqp_test COMMAND mpc_osqp_test)
endif ()
