function(make_test TEST_FILE)
    add_executable(${TEST_FILE} "${CMAKE_CURRENT_LIST_DIR}/${TEST_FILE}.cpp")
    target_link_libraries(${TEST_FILE} PRIVATE ctrlpp::ctrlpp Catch2::Catch2WithMain)
    target_compile_options(${TEST_FILE} PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME ${TEST_FILE} COMMAND ${TEST_FILE})
endfunction()

make_test(pid_core_test)
make_test(pid_integration_method_test)
make_test(pid_derivative_test)
make_test(pid_filtering_test)
make_test(pid_antiwindup_test)
make_test(pid_velocity_form_test)
make_test(pid_tracking_test)
make_test(pid_gain_scheduling_test)
make_test(pid_performance_test)
make_test(pid_mimo_test)
make_test(pid_output_test)
make_test(state_space_test)
make_test(observer_concept_test)
make_test(conversion_test)
make_test(analysis_test)
make_test(discretise_test)
make_test(pid_eigen_test)
make_test(dare_test)
make_test(analysis_extended_test)
make_test(kalman_test)
make_test(luenberger_test)
make_test(lqr_test)
make_test(mpc_test)
make_test(nmpc_test)
make_test(numerical_diff_test)
make_test(runge_kutta_test)
make_test(ekf_convergence_test)
make_test(ekf_covariance_test)
make_test(ukf_sigma_test)
make_test(ukf_tracking_test)
make_test(ukf_strategy_test)
make_test(particle_filter_resampling_test)
make_test(particle_filter_tracking_test)
make_test(particle_filter_config_test)
make_test(fit_metrics_test)
make_test(rls_test)
make_test(recursive_arx_test)
make_test(batch_arx_test)
make_test(n4sid_test)
make_test(so3_test)
make_test(biquad_test)
make_test(fir_test)
make_test(complementary_filter_test)
make_test(mekf_test)
make_test(manifold_ukf_test)
make_test(trajectory_types_test)
make_test(path_test)
make_test(polynomial_trajectory_test)
make_test(trajectory_adapter_test)
make_test(piecewise_trajectory_test)
make_test(trapezoidal_trajectory_test)
make_test(double_s_trajectory_test)
make_test(time_scaling_test)

if (CTRLPP_BUILD_OSQP)
    add_executable(mpc_osqp_test "${CMAKE_CURRENT_LIST_DIR}/mpc_osqp_test.cpp")
    target_link_libraries(mpc_osqp_test PRIVATE ctrlpp::osqp Catch2::Catch2WithMain)
    target_compile_options(mpc_osqp_test PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME mpc_osqp_test COMMAND mpc_osqp_test)

    add_executable(terminal_set_test "${CMAKE_CURRENT_LIST_DIR}/terminal_set_test.cpp")
    target_link_libraries(terminal_set_test PRIVATE ctrlpp::osqp Catch2::Catch2WithMain)
    target_compile_options(terminal_set_test PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME terminal_set_test COMMAND terminal_set_test)

    add_executable(mhe_test "${CMAKE_CURRENT_LIST_DIR}/mhe_test.cpp")
    target_link_libraries(mhe_test PRIVATE ctrlpp::osqp Catch2::Catch2WithMain)
    target_compile_options(mhe_test PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME mhe_test COMMAND mhe_test)
endif ()

if (CTRLPP_BUILD_NLOPT)
    add_executable(nmpc_nlopt_test "${CMAKE_CURRENT_LIST_DIR}/nmpc_nlopt_test.cpp")
    target_link_libraries(nmpc_nlopt_test PRIVATE ctrlpp::nlopt Catch2::Catch2WithMain)
    target_compile_options(nmpc_nlopt_test PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME nmpc_nlopt_test COMMAND nmpc_nlopt_test)

    add_executable(nmpc_constraint_test "${CMAKE_CURRENT_LIST_DIR}/nmpc_constraint_test.cpp")
    target_link_libraries(nmpc_constraint_test PRIVATE ctrlpp::nlopt Catch2::Catch2WithMain)
    target_compile_options(nmpc_constraint_test PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME nmpc_constraint_test COMMAND nmpc_constraint_test)

    add_executable(nmhe_test "${CMAKE_CURRENT_LIST_DIR}/nmhe_test.cpp")
    target_link_libraries(nmhe_test PRIVATE ctrlpp::nlopt Catch2::Catch2WithMain)
    target_compile_options(nmhe_test PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME nmhe_test COMMAND nmhe_test)
endif ()

if (CTRLPP_BUILD_PROPERTY_TESTS)
    function(make_property_test TEST_FILE)
        add_executable(${TEST_FILE} "${CMAKE_CURRENT_LIST_DIR}/${TEST_FILE}.cpp")
        target_link_libraries(${TEST_FILE} PRIVATE
            ctrlpp::ctrlpp
            Catch2::Catch2WithMain
            rapidcheck
            rapidcheck_catch
        )
        target_compile_options(${TEST_FILE} PRIVATE ${CTRLPP_WARNING_FLAGS})
        add_test(NAME ${TEST_FILE} COMMAND ${TEST_FILE})
    endfunction()

    make_property_test(pid_property_test)
    make_property_test(dare_property_test)
    make_property_test(kalman_property_test)
    make_property_test(so3_property_test)
    make_property_test(estimator_property_test)
    make_property_test(dsp_property_test)
    make_property_test(sysid_property_test)
endif ()

if (CTRLPP_BUILD_OSQP AND CTRLPP_BUILD_PROPERTY_TESTS)
    add_executable(mpc_property_test "${CMAKE_CURRENT_LIST_DIR}/mpc_property_test.cpp")
    target_link_libraries(mpc_property_test PRIVATE
        ctrlpp::osqp Catch2::Catch2WithMain rapidcheck rapidcheck_catch)
    target_compile_options(mpc_property_test PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME mpc_property_test COMMAND mpc_property_test)
endif ()

if (CTRLPP_BUILD_OSQP AND CTRLPP_BUILD_NLOPT)
    add_executable(mpc_closedloop_test "${CMAKE_CURRENT_LIST_DIR}/mpc_closedloop_test.cpp")
    target_link_libraries(mpc_closedloop_test PRIVATE
        ctrlpp::osqp ctrlpp::nlopt Catch2::Catch2WithMain)
    target_compile_options(mpc_closedloop_test PRIVATE ${CTRLPP_WARNING_FLAGS})
    add_test(NAME mpc_closedloop_test COMMAND mpc_closedloop_test)
endif ()
